--- a/button-score.html
+++ b/button-score.html
@@ -2,49 +2,36 @@
 <html lang="el">
 <head>
 <meta charset="UTF-8">
-<title>Score Button</title>
+<title>Show Score Button</title>
 
 <style>
-  body {
-    margin: 0;
-    padding: 0;
+  html, body {
+    margin: 0; padding: 0;
+    width: 100%; height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background: transparent;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
-  #score-btn {
-    display: inline-flex;
-    align-items: center;
-    gap: 12px;
-    padding: 14px 22px;
-    background: linear-gradient(135deg, #2196F3, #4CAF50);
-    color: white;
-    font-size: 22px;
-    font-weight: 600;
-    border-radius: 16px;
+  #btn {
+    width: 260px;           /* ← REQUIRED for Genially */
+    height: auto;
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
-    text-decoration: none; /* importante */
-    white-space: nowrap;
-  }
-
-  .trophy {
-    font-size: 26px;
+    display: block;
   }
 </style>
 
 </head>
 <body>
 
-<!-- The clickable button -->
-<a id="score-btn" href="score.html" target="_blank">
-  <span class="trophy">🏆</span>
-  <span>Δείτε το σκορ σας</span>
-</a>
+<img id="btn" src="show_score.JPG" alt="Show Score">
+
+<script>
+document.getElementById("btn").onclick = () => {
+  window.open("score.html", "_blank");
+};
+</script>
 
 </body>
 </html>
